--- a/index.html
+++ b/index.html
@@ -468,22 +468,45 @@
    
      <!-- おすすめスポット -->
      <section class="recommend">
-        <div class="recommend__head__form">
-            <svg class="recommend__head__form1" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
+        <div class="recommend__head__form-sp">
+            <svg class="recommend__head__sp__form1 hidden-pc" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
                 <path d="M49.6 0.285645C26.7391 0.285626 23.04 12.4068 0 12.4069V45.9999H96V12.4069C72.96 12.4069 72.4609 0.285663 49.6 0.285645Z" fill="#67B0C7"/>
               </svg>
-              <svg class="recommend__head__form2" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
+              <svg class="recommend__head__sp__form2 hidden-pc" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
                 <path d="M49.6 0.285645C26.7391 0.285626 23.04 12.4068 0 12.4069V45.9999H96V12.4069C72.96 12.4069 72.4609 0.285663 49.6 0.285645Z" fill="#67B0C7"/>
               </svg>
-              <svg class="recommend__head__form3" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
+              <svg class="recommend__head__sp__form3 hidden-pc" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
                 <path d="M49.6 0.285645C26.7391 0.285626 23.04 12.4068 0 12.4069V45.9999H96V12.4069C72.96 12.4069 72.4609 0.285663 49.6 0.285645Z" fill="#67B0C7"/>
               </svg>
-              <svg class="recommend__head__form4" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
+              <svg class="recommend__head__sp__form4  hidden-pc" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
                 <path d="M49.6 0.285645C26.7391 0.285626 23.04 12.4068 0 12.4069V45.9999H96V12.4069C72.96 12.4069 72.4609 0.285663 49.6 0.285645Z" fill="#67B0C7"/>
               </svg>
         </div>
+        <div class="recommend__head__form-pc hidden-sp">
+            <svg class="recommend__head__pc__form hidden-sp" xmlns="http://www.w3.org/2000/svg" width="252" height="120" viewBox="0 0 252 120" fill="none">
+                <path d="M130.2 0C70.19 -4.73476e-05 60.48 31.8181 0 31.8182V120H252V31.8182C191.52 31.8182 190.21 4.73476e-05 130.2 0Z" fill="#67B0C7"/>
+                </svg>
+            <svg class="recommend__head__pc__form hidden-sp" xmlns="http://www.w3.org/2000/svg" width="252" height="120" viewBox="0 0 252 120" fill="none">
+                <path d="M130.2 0C70.19 -4.73476e-05 60.48 31.8181 0 31.8182V120H252V31.8182C191.52 31.8182 190.21 4.73476e-05 130.2 0Z" fill="#67B0C7"/>
+                </svg>
+            <svg class="recommend__head__pc__form hidden-sp" xmlns="http://www.w3.org/2000/svg" width="252" height="120" viewBox="0 0 252 120" fill="none">
+                <path d="M130.2 0C70.19 -4.73476e-05 60.48 31.8181 0 31.8182V120H252V31.8182C191.52 31.8182 190.21 4.73476e-05 130.2 0Z" fill="#67B0C7"/>
+                </svg>
+             <svg class="recommend__head__pc__form hidden-sp" xmlns="http://www.w3.org/2000/svg" width="252" height="120" viewBox="0 0 252 120" fill="none">
+                <path d="M130.2 0C70.19 -4.73476e-05 60.48 31.8181 0 31.8182V120H252V31.8182C191.52 31.8182 190.21 4.73476e-05 130.2 0Z" fill="#67B0C7"/>
+                </svg>
+            <svg class="recommend__head__pc__form hidden-sp" xmlns="http://www.w3.org/2000/svg" width="252" height="120" viewBox="0 0 252 120" fill="none">
+               <path d="M130.2 0C70.19 -4.73476e-05 60.48 31.8181 0 31.8182V120H252V31.8182C191.52 31.8182 190.21 4.73476e-05 130.2 0Z" fill="#67B0C7"/>
+                </svg>
+            <svg class="recommend__head__pc__form hidden-sp" xmlns="http://www.w3.org/2000/svg" width="252" height="120" viewBox="0 0 252 120" fill="none">
+                <path d="M130.2 0C70.19 -4.73476e-05 60.48 31.8181 0 31.8182V120H252V31.8182C191.52 31.8182 190.21 4.73476e-05 130.2 0Z" fill="#67B0C7"/>
+                </svg>
+        </div>
+
+
         <div class="recommend__inner inner">
             <div class="recommend__content">
+                <div class="recommend__content_pc">
                 <div class="recommend__title">
                     <div class="star"><img src="./img/Icon-star.png" alt=""></div>
                     <div class="recommend__title-text">おすすめスポット</div>
@@ -571,27 +594,120 @@
                     <div class="swiper-button-next"></div>
                 </div>
                 </div>
+            </div>
+<div class="reccomend__last__section">
                 <div class="recommend__img-sport"><img src="./img/img_spots.png" alt=""></div>
+                <div class="recommend__last">
                 <div class="recommend__white-text">レトロな景色に出会える人気の撮影スポットをピックアップ！</div>
                 <button class="recommend__button button2">#見つけて尾道レトロ の最新投稿を見る</button>
+            </div></div>
             </div>
         </div>
         <div class="recommend__bottom__icon">
-        <svg class="recommend__bottom__icon1" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
+        <svg class="recommend__bottom__icon1 hidden-pc" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
             <path d="M49.6 45.7144C26.7391 45.7144 23.04 33.5932 0 33.5931V6.86646e-05H96V33.5931C72.96 33.5931 72.4609 45.7143 49.6 45.7144Z" fill="#67B0C7"/>
         </svg>
-        <svg class="recommend__bottom__icon2" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
+        <svg class="recommend__bottom__icon2 hidden-pc" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
             <path d="M49.6 45.7144C26.7391 45.7144 23.04 33.5932 0 33.5931V6.86646e-05H96V33.5931C72.96 33.5931 72.4609 45.7143 49.6 45.7144Z" fill="#67B0C7"/>
             </svg>
-        <svg class="recommend__bottom__icon3" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
+        <svg class="recommend__bottom__icon3 hidden-pc" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
             <path d="M49.6 45.7144C26.7391 45.7144 23.04 33.5932 0 33.5931V6.86646e-05H96V33.5931C72.96 33.5931 72.4609 45.7143 49.6 45.7144Z" fill="#67B0C7"/>
         </svg>
-        <svg class="recommend__bottom__icon4" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
+        <svg class="recommend__bottom__icon4 hidden-pc" xmlns="http://www.w3.org/2000/svg" width="96" height="46" viewBox="0 0 96 46" fill="none">
             <path d="M49.6 45.7144C26.7391 45.7144 23.04 33.5932 0 33.5931V6.86646e-05H96V33.5931C72.96 33.5931 72.4609 45.7143 49.6 45.7144Z" fill="#67B0C7"/>
         </svg>
     </div>
-     </section>
 
+    <div class="recommend__bottom__form-pc hidden-sp">
+        <svg class="recommend__bottom__pc__form hidden-sp" xmlns="http://www.w3.org/2000/svg" width="252" height="120" viewBox="0 0 252 120" fill="none">
+            <path d="M130.2 0C70.19 -4.73476e-05 60.48 31.8181 0 31.8182V120H252V31.8182C191.52 31.8182 190.21 4.73476e-05 130.2 0Z" fill="#67B0C7"/>
+            </svg>
+        <svg class="recommend__bottom__pc__form hidden-sp" xmlns="http://www.w3.org/2000/svg" width="252" height="120" viewBox="0 0 252 120" fill="none">
+            <path d="M130.2 0C70.19 -4.73476e-05 60.48 31.8181 0 31.8182V120H252V31.8182C191.52 31.8182 190.21 4.73476e-05 130.2 0Z" fill="#67B0C7"/>
+            </svg>
+        <svg class="recommend__bottom__pc__form hidden-sp" xmlns="http://www.w3.org/2000/svg" width="252" height="120" viewBox="0 0 252 120" fill="none">
+            <path d="M130.2 0C70.19 -4.73476e-05 60.48 31.8181 0 31.8182V120H252V31.8182C191.52 31.8182 190.21 4.73476e-05 130.2 0Z" fill="#67B0C7"/>
+            </svg>
+         <svg class="recommend__bottom__pc__form hidden-sp" xmlns="http://www.w3.org/2000/svg" width="252" height="120" viewBox="0 0 252 120" fill="none">
+            <path d="M130.2 0C70.19 -4.73476e-05 60.48 31.8181 0 31.8182V120H252V31.8182C191.52 31.8182 190.21 4.73476e-05 130.2 0Z" fill="#67B0C7"/>
+            </svg>
+        <svg class="recommend__bottom__pc__form hidden-sp" xmlns="http://www.w3.org/2000/svg" width="252" height="120" viewBox="0 0 252 120" fill="none">
+           <path d="M130.2 0C70.19 -4.73476e-05 60.48 31.8181 0 31.8182V120H252V31.8182C191.52 31.8182 190.21 4.73476e-05 130.2 0Z" fill="#67B0C7"/>
+            </svg>
+        <svg class="recommend__bottom__pc__form hidden-sp" xmlns="http://www.w3.org/2000/svg" width="252" height="120" viewBox="0 0 252 120" fill="none">
+            <path d="M130.2 0C70.19 -4.73476e-05 60.48 31.8181 0 31.8182V120H252V31.8182C191.52 31.8182 190.21 4.73476e-05 130.2 0Z" fill="#67B0C7"/>
+            </svg>
+    </div>
+     </section>
+<!-- Q&Aセクション -->
+      <section class="qa">
+      <div class="qa__inner inner">
+        <div class="qa__content">
+         <div class="qa__head-center head-center">
+                <div class="qa__icon icon"><img src="./img/chat_Icon.png" alt=""></div>
+                <div class="qa__title title">Q&A</div>
+                <h2 class="qa__sub sub">よくあるご質問</h2>
+            </div>
+        <div class="qa__boxes">
+            <div class="qa__box qa-box is-open">
+                <button type="button" class="qa-box__head js-accordion">
+                <span class="qa-box__head-icon">Q</span>
+                <span class="qa-box__head-text">ひとりで複数回投稿してもいいですか？</span>
+                </button>
+                <div class="qa-box__body"  style="display:block">
+                <div class="qa-box__a">
+                <div class="qa-box__a-icon">A</div>
+                <div class="qa-box__a-text">期間中であれば何度でも投稿可能ですが、当選は１回限りとなります。</div>
+                    </div>
+                </div>
+            </div>
+          <div class="qa__box qa-box">
+            <button type="button" class="qa-box__head js-accordion">
+              <span class="qa-box__head-icon">Q</span>
+              <span class="qa-box__head-text">過去の尾道旅行の写真でもいいですか？</span>
+            </button>
+            <div class="qa-box__body">
+              <div class="qa-box__a">
+              <div class="qa-box__a-icon">A</div>
+              <div class="qa-box__a-text">キャンペーン以前の期間に撮影した写真での参加も可能です。ただし、過去のInstagramに投稿済みのものに編集で「#見つけて尾道レトロ」を追加されてもシステム上反映することはできません。ご注意ください。</div>
+            </div>
+          </div></div>
+
+          <div class="qa__box qa-box">
+            <button type="button" class="qa-box__head js-accordion">
+              <span class="qa-box__head-icon">Q</span>
+              <span class="qa-box__head-text">お店の中で写真を撮ってもいいですか？</span>
+            </button>
+            <div class="qa-box__body">
+              <div class="qa-box__a">
+              <div class="qa-box__a-icon">A</div>
+              <div class="qa-box__a-text">店内で撮影した写真での参加も可能ですが、他人のプライバシーを侵害する写真によるご応募は無効です。店内撮影の際は、必ずお店の人へご確認ください。</div>
+            </div>
+            </div>
+        </div>
+
+        <div class="qa__box qa-box">
+            <button type="button" class="qa-box__head js-accordion">
+              <span class="qa-box__head-icon">Q</span>
+              <span class="qa-box__head-text">当選したらプレゼントは選べますか？</span>
+            </button>
+            <div class="qa-box__body">
+              <div class="qa-box__a">
+              <div class="qa-box__a-icon">A</div>
+              <div class="qa-box__a-text">恐れ入りますが、プレゼントをお選びいただくことはできません。また、ご当選者の発表は当選者の方への連絡をもって代えさせていただきます。</div>
+            </div>
+            </div>
+        </div>
+
+            </div>
+        </div>
+      </div>
+    </section>
+
+
+     <a href="#" id="js-page-top" class="page-top hidden-sp">
+        <img src="./img/img_pagetop.png" alt="">
+     </a>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
